AI Feedback Implementation: The user requested the company name in the footer to be updated from 'NexaFlow' to 'Ai Agent'.

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <a href="#">Support</a>
                 <a href="#">Blog</a>
             </div>
-            <p class="footer-text">&copy; 2025 NexaFlow. All rights reserved.</p>
+            <p class="footer-text">&copy; 2025 Ai Agent. All rights reserved.</p>
         </div>
     </footer>
 
