--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         .cta-buttons {
             display: flex;
             gap: 20px;
-            justify-content: center;
+<h1>Test</h1>
             flex-wrap: wrap;
         }
 
