--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             z-index: 1000;
             transition: all 0.3s ease;
         }
+<a href="#" class="btn btn-primary">Login</a>
+</div>
 
         .nav-container {
             display: flex;
