AI Feedback Implementation: To provide users with the ability to log in and sign up for the service.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             overflow-x: hidden;
         }
 
+<li><a href='/login'>Login</a></li><li><a href='/signup'>Signup</a></li>
         /* Animated background particles */
         .bg-particles {
             position: fixed;
