AI Feedback Implementation: To fulfill the user's request by adding login and signup buttons to the navigation bar, making them easily accessible.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             padding: 0 20px;
             animation: fadeInUp 1s ease-out;
         }
-
+<div class="nav-links"> <a href="#features">Features</a> <a href="#about">About</a> <a href="#contact">Contact</a> <a href="#login" class="btn btn-secondary">Login</a> <a href="#signup" class="btn btn-primary">Sign Up</a> </div>
         @keyframes fadeInUp {
             from {
                 opacity: 0;
