AI Feedback Implementation: To fulfill the user's request for login and signup buttons in the navigation bar, we add styled buttons using existing CSS classes for consistency.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             background-clip: text;
         }
 
-        .hero p {
+<div class="nav-links"> <a href="#features">Features</a> <a href="#about">About</a> <a href="#contact">Contact</a> <a href="#" class="btn btn-primary">Login</a> <a href="#" class="btn btn-secondary">Sign Up</a> </div>
             font-size: 20px;
             color: rgba(255, 255, 255, 0.8);
             margin-bottom: 40px;
