AI Feedback Implementation: The change addresses the user's request to make the heading color black and increase the font size. The gradient effect is removed to ensure clarity and readability.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         /* Hero Section */
         .hero {
             height: 100vh;
-            display: flex;
+.hero h1 { font-size: clamp(60px, 10vw, 90px); font-weight: 800; color: black; margin-bottom: 20px; line-height: 1.1; background: none; -webkit-text-fill-color: black; }
             align-items: center;
             justify-content: center;
             text-align: center;
