--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agent Test</title>
     <style>
+<nav><button id="login-button">Login</button></nav>
         * {
             margin: 0;
             padding: 0;
