--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+<style>#login-button { background-color: #4CAF50; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border-radius: 5px; }</style>
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
