--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="intro">
             <h2>What are AI Agents?</h2>
             <p>AI Agents are autonomous entities that perceive their environment through sensors and act upon that environment through actuators to achieve specific goals.</p>
-            <img src="https://via.placeholder.com/600x300?text=AI+Agent+Diagram" alt="AI Agent Diagram">
+            <img src="https://www.newhorizons.com/Portals/2/EasyDNNNews/1101/images/freepik__upload__47911-1200-628-c-L-97.jpeg" alt="AI Agent Diagram">
         </section>
         
         <section class="types">
