AI Feedback Implementation: The user wants to change the main heading to "Learn About AI Agents".

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <h1>Learn About AI Agents</h1>
     <title>AI Agents Information</title>
     <link rel="stylesheet" href="styles.css">
 </head>
