--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 return;
             }
             try {
-                const response = await fetch('http://85.215.229.78:8447/api/v1/feedbacks/create/', {
+                const response = await fetch('https://affebb06eaef.ngrok-free.app/api/v1/feedbacks/create/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
