--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 return;
             }
             try {
-                const response = await fetch('https://align-cartridges-permanent-sagem.trycloudflare.com/api/v1/feedbacks/create/', {
+                const response = await fetch('https://pope-syndicate-four-effort.trycloudflare.com/api/v1/feedbacks/create/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        project_key: '3479871e-01ff-43b9-b91e-bb95db175144',
+                        project_key: '',
                         title: feedback
                     })
                 });
