--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        project_key: '',
+                        project_key: '57fe9dc3-d971-43e2-9276-a0e0694fc8e6',
                         title: feedback
                     })
                 });
