--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 return;
             }
             try {
-                const response = await fetch('http://api.featurepilot.bot.nu/api/v1/feedbacks/create/', {
+                const response = await fetch('https://api.featurepilot.bot.nu/api/v1/feedbacks/create/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
